--- a/product.html
+++ b/product.html
@@ -95,7 +95,7 @@
                 <div class="card mx-auto" style="width: 18rem;">
                     <img src="assets/berasporang.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title text-center">Porang Rice</h5>
+                        <h5 class="card-title text-center"></h5>
                         <p class="card-text ">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                         
                     </div>
